make read spacing similar to edit spacing, prevent add pe popup when not in edit mode

--- a/src/assets/styles/components/_mms-transclude.scss
+++ b/src/assets/styles/components/_mms-transclude.scss
@@ -24,9 +24,6 @@ mms-view {
       display: inline;
     }
   }
-  .add-pe-button-container {
-    display: none;
-  }
 }
 
 mms-view.outline,
@@ -58,12 +55,6 @@ mms-view.editing {
     .panel {
       margin: 0px;
     }
-  }
-}
-
-mms-view.editing {
-  .add-pe-button-container {
-    display: block;
   }
 }
 
